--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1471,107 +1471,107 @@ stories:
   domain: http://www.sonorannews.com/
   link: http://sonorannews.com/2019/12/27/art-show-at-desert-foothills-library/
 images:
-- name: art-museum-art-museum-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-nazi-poster.jpg
-- name: miamibeach-miamibeach-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-atari-missle.jpg
-- name: adam-smith-adam-smith-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-plentiful.jpg
-- name: liberty-back-statue-liberty-back-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-diego-rivera1.jpg
-- name: capital-battle-capitolbattle-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-marcel-duchamp.jpg
-- name: castle-wall-DSC-0067-copper-circuit-2.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-copper-circuit-2.JPG
-- name: oldcabin-oldcabin-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-marcel-duchamp.jpg
-- name: capital-battle-capitolbattle-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-far-away.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-monet-one.jpg
-- name: capital-battle-capitolbattle-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-diego-rivera1.jpg
-- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-- name: beach-rocks-beach-rocks-currents-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dali-two.jpg
-- name: flower-barbed-wire-flower-barbed-wire-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-sand-paper.jpg
-- name: fence-mexico-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-monet-one.jpg
-- name: berlinwall2-berlinwall-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-aqua.jpg
-- name: crow_ww2_dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_ww2_dresden.jpg
-- name: berlinwall-DSC-0084-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dali-three.jpg
-- name: subway-subway-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-wols.jpg
-- name: downtown-trucksilo-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-two.jpg
-- name: cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
-- name: old-barn-old-barn-1500-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-hot-spicy.jpg
-- name: gypsy-wagon-gypsywagon-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gred-mash.jpg
-- name: nazi-invasion-san-francisco-wharf-clock.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-wharf-clock.jpg
-- name: oldroad-old-road-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-deep-connections.jpg
-- name: carry-load-carryload-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-deep-connections.jpg
-- name: beach-rocks-beach-rocks-currents-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-smooth-ride.jpg
-- name: flower-barbed-wire-flower-barbed-wire-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-internet-numbers.jpg
-- name: locked-up-steam-lock-up-steam-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-kandinsky-bv.jpg
-- name: oldroad-old-road-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-dali.jpg
-- name: old-barn-old-barn-1500-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-spagetti-accident.jpg
-- name: sand-hand-sand-hand-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-atari-missle.jpg
-- name: oldhouse-oldhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-electricity.jpg
-- name: school-clouds-church-clouds-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dali-three.jpg
-- name: copper-circuit-old-piano-paris-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-piano-paris-hospital.jpg
-- name: aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
-- name: border-crossing-bordercrossing-rainbow-festival.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-rainbow-festival.png
-- name: old-house-oldhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-really-hot.jpg
-- name: oldcabin-store-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-circuit.jpg
-- name: nazi-invasion-DSC_0062.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0062.jpg
-- name: nazi-invasion-city-waterfront-path.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-waterfront-path.jpg
-- name: mistywoods-babyfoot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot.jpg
-- name: castle-wall-DSC-0067-aqua.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-aqua.JPG
-- name: subway-subway-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-purple-storm.jpg
-- name: yosemite-yosemite-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-oily-mcoilface.jpg
-- name: fence-fence-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-purple-storm.jpg
-- name: crow-crow-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-matrix.jpg
-- name: subway-subway-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-satan-red.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-smoking-cigarette.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-smoking-cigarette.JPG
-- name: fast-lights-freeway-redes-fast-flux-623x425-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-kandinsky-bv.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-- name: old-granary-field-oldhouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-rainbow-festival.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-crabapple.jpg
+- name: border-crossing-bordercrossing-kandinsky-bv.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kandinsky-bv.png
+- name: christianity-christianity-under-construction-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-colored-circuits.jpg
+- name: fence-fence-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-hot-spicy.jpg
+- name: fence-fence-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-diego-rivera1.jpg
+- name: bordercrossing-bordercrossing-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-light-dali.jpg
+- name: fence-fence-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-plentiful.jpg
+- name: beach-clouds-lifeguard-beachclouds-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purple-pond.jpg
+- name: powerlines-power-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crunch-paper.jpg
+- name: locked-up-steam-lock-up-steam-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-soul.jpg
+- name: ellis-island-ellis-island-room-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gred-mash.jpg
+- name: border-crossing-bordercrossing-constitution.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-constitution.png
+- name: old-barn-old-barn-1500-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kandinsky-bv.jpg
+- name: berlinwall-DSC-0084-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dali-two.jpg
+- name: nazi-invasion-surveillance-over-the-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-surveillance-over-the-city.jpg
+- name: aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
+- name: curtain-curtain-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-purple-storm.jpg
+- name: downtown-los-angeles-downtown-la-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-purp-paper.JPG
+- name: bf-skinner-docs-cranes-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-docs-cranes-waterfront.jpg
+- name: windowmountain-window-mountain-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-electricity.jpg
+- name: stories-redes-fast-flux-623x425-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-redes-fast-flux-623x425-blue-electricity.jpg
+- name: stalin-time-statue-capital-cannon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-capital-cannon.jpg
+- name: nazi-invasion-train-station-cloud.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-station-cloud.jpg
+- name: power-lines-power-lines-empty-space-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-sunday.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-3.jpg
+- name: oldhouse-oldhouse-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-atari-asteroids.jpg
+- name: berlinwall-DSC-0084-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-spagetti-accident.jpg
+- name: gypsy-wagon-gypsywagon-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-rainbow-festival.jpg
+- name: nazi-invasion-city-clouds-building-crowded.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-clouds-building-crowded.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-colorful-dream.jpg
+- name: oldhotel-oldhotel-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colored-circuits.jpg
+- name: stories-new-16-77-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-16-77-800-500-0-max-0-1--1.jpg
+- name: braceros-domingo-ulloa-roman-marcus-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-roman-marcus-looking-down.jpg
+- name: white-house-lawn-white-house-window-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-soul.jpg
+- name: downtown-los-angeles-downtown-la-sunday.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-sunday.JPG
+- name: paris-paris-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-green-zuma.jpg
+- name: supreme-court-supremecourt-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-post-modern.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
+- name: san-francisco-city-bridge-sf-city-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge.jpg
+- name: birdhouse-birdhouse-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-space-pizza.jpg
+- name: flower-barbed-wire-flower-barbed-wire-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-gan-vogh.jpg
+- name: abandonedbuildings_dali_three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dali_three.jpg
+- name: nazi-invasion-seattle-shipping-people-walking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-shipping-people-walking.jpg
+- name: old-barn-old-barn-1500-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purp-paper.jpg
+- name: crow_creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_creativity.jpg
+- name: stalin-time-creepy-doll-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-creepy-doll-looking-down.jpg
+- name: server-cloud-server-racks-clouds-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-colorful-dream.jpg
+- name: nazi-invasion-train-station-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-station-statue.jpg
+- name: ellis-island-ellisisland-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-dream.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dali-three.jpg
+- name: berlinwall-DSC-0084-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alien-goggles.jpg
 ---
 Sports Editor Apologizes For Tweeting 'scalps' After Game.&nbsp;Zabiegi Na Cellulit Wojkowice.&nbsp;Gather Receipts For Motor Fuel Income Tax Credit.&nbsp;Better Balance For Every Day.&nbsp;Annual Point In Time Homeless Count.&nbsp;Boys In The Band Tribute Concert Raises Funds For Local Causes.&nbsp;Late Antlerless Deer Season Extended For Residents In Two Areas.&nbsp;Blackhawks Rally To Beat Blue Jackets In Shootout.&nbsp;
