--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1471,107 +1471,107 @@ stories:
   domain: http://www.sonorannews.com/
   link: http://sonorannews.com/2019/12/27/art-show-at-desert-foothills-library/
 images:
-- name: fast-lights-freeway-redes-fast-flux-623x425-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-dry-skin.jpg
-- name: gears-4882162452-fa3126b38d-b-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-green-zuma.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-deep-connections.jpg
-- name: containership-containership-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-bright-sand.jpg
-- name: la-muse-dragon-desert-looking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dragon-desert-looking.jpg
-- name: legal-statue-legalstatue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue.jpg
-- name: old-granary-field-granaryfield-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-creativity.jpg
-- name: art-museum-art-museum-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-kandinsky-bv.jpg
-- name: dragon-desert-desert-dragon-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-circuit-5.jpg
-- name: miamibeach-miamibeach-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-really-hot.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-aqua.jpg
-- name: old-church-oldchurch-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-far-away.jpg
-- name: meadowbutterfly-meadow-butterfly-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-gred-mash.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-deep-connections.jpg
-- name: white-house-lawn-white-house-window-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-plentiful.jpg
-- name: castle-wall-DSC-0067-graham-sutherland.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-graham-sutherland.JPG
-- name: bf-skinner-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-bridge-over-columbia.jpg
-- name: oldhousecars-house-old-cars-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crunch-paper.jpg
-- name: hollywood-building-hollywood-building-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-soul.jpg
-- name: oldcabin-store-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-nazi-poster.jpg
-- name: powerlines-power-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-green-zuma.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-far-away.jpg
-- name: oldhousecars-house-old-cars-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dali-three.jpg
-- name: copper-circuit-shipping-container-yard-police-boat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-shipping-container-yard-police-boat.jpg
-- name: oldsmallboat-oldsmallboat-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-asteroids.jpg
-- name: mediterranean-mediterranean-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-mucha-mult.jpg
-- name: beach-rocks-beach-rocks-currents-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-pablo-blue.jpg
-- name: containership-containership-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-atari-missle.jpg
-- name: diamondcreek-diamondcreek-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/diamondcreek-diamondcreek-still-1200.jpg
-- name: store-on-corner-store-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colorful-dream.jpg
-- name: subway-subway-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-constitution.jpg
-- name: gypsymosaic-gypsy-eyes-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-satan-red.jpg
-- name: subway-subway-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-smooth-ride.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-three.jpg
-- name: braceros-domingo-ulloa-hallway-mirrors-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-hallway-mirrors-hotel.jpg
-- name: old-door-lock-old-door-lock-2-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-3.jpg
-- name: nyc-flag-nycflag-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-sunday.jpg
-- name: trucksilo-trucksilo-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-kandinsky-bv.jpg
-- name: aws-s3-methuselah-methuselah-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-methuselah-methuselah-still-600.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-smooth-ride.jpg
-- name: la-muse-flowers-diamon-creek.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-flowers-diamon-creek.jpg
-- name: gears-4882162452-fa3126b38d-b-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-nazi-poster.jpg
-- name: aws-s3-stories-sf-city-bridge-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-sf-city-bridge-copper-circuit.jpg
-- name: aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
-- name: carry-load-carryload-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-post-modern.jpg
-- name: bluelake-clean-view-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-38-67.jpg
-- name: copper-circuit-screaming-face-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-screaming-face-statue.jpg
-- name: crow-crow-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-spagetti-accident.jpg
-- name: oldbarn-oldbarn-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-far-away.jpg
-- name: store-on-corner-store-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-dali.jpg
-- name: server-cloud1-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-blue-circuit.jpg
+- name: nazi-invasion-lincoln-sitting-front.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-lincoln-sitting-front.jpg
+- name: dc-statue-dcstatue-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dry-skin.jpg
+- name: docks-docks-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-copper-circuit.jpg
+- name: amusement-park-amusement-park-2-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crabapple.jpg
+- name: razorwire-DSC-0080-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-spagetti-accident.jpg
+- name: copper-circuit-water-fountain-many-shooting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-water-fountain-many-shooting.jpg
+- name: store-on-corner-oldcabin-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-graham-sutherland.jpg
+- name: oldhousecars-house-old-cars-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-colored-circuits.jpg
+- name: birdhouse-birdhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-soul.jpg
+- name: stalin-time-surveillance-cameras_36569244062_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-surveillance-cameras_36569244062_o.jpg
+- name: oldhotel-oldhotel-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-gred-mash.jpg
+- name: containership-containership-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-electricity.jpg
+- name: la-muse-highway-granary-truck_36557728122_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-highway-granary-truck_36557728122_o.jpg
+- name: aws-s3-kerbypeak-kerbypeak-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still-600.jpg
+- name: stalin-time-old-comuter-wheels-crypto.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-comuter-wheels-crypto.jpg
+- name: oldtrain-oldtrain-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sand-paper.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-hot-spicy.jpg
+- name: nazi-invasion-border-fence-down-the-line-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-border-fence-down-the-line-2.jpg
+- name: stalin-time-statue-of-liberty_36744433525_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-of-liberty_36744433525_o.jpg
+- name: downtown-trucksilo-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-emily-carr.jpg
+- name: hollywood-building-hollywood-building-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-china-prop.jpg
+- name: stories-old-door-lock-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-old-door-lock-copper-circuit.jpg
+- name: berlinwall-DSC-0084-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-sand-paper.jpg
+- name: white-house-lawn-white-house-window-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-aqua.jpg
+- name: copper-circuit-working-on-railroad-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-working-on-railroad-2.jpg
+- name: christianity-christianity-under-construction.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction.jpg
+- name: birdhouse-birdhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colored-circuits.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-spagetti-accident.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
+- name: san-francisco-street-view-san-francisco-street-view-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purple-storm.jpg
+- name: old-door-lock-old-door-lock-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-far-away.jpg
+- name: amusement-park-amusement-park-2-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-feed-people.jpg
+- name: stalin-time-old-gas-station_36588462091_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-gas-station_36588462091_o.jpg
+- name: hollywood-building-hollywood-building-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-cinnamon-rolls.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-jap-wav-pr.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-jap-wav-pr.png
+- name: razorwire-DSC-0080-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-wols.jpg
+- name: nazi-invasion-chess-in-the-park-with-pigeons.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-chess-in-the-park-with-pigeons.jpg
+- name: cargo-ship-cargo-ship-on-sea-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-free-woman.jpg
+- name: oldhouse-granaryfield-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colorful-dream.jpg
+- name: legal-statue-legalstatue-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crafty-painting.jpg
+- name: aws-s3-square-C3JdRtDWMAUqS6L-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L-square.jpg
+- name: meadowbutterfly-meadow-butterfly-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-collage.jpg
+- name: yosemite-yosemite-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dali-two.jpg
+- name: ellis-island-ellisisland-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-deep-connections.jpg
+- name: dragon-desert-desert-dragon-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-smoking-cigarette.jpg
+- name: nazi-invasion-downtown-la_36349151230_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-la_36349151230_o.jpg
+- name: old-door-lock-old-door-lock-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crabapple.jpg
+- name: oldcabin-store-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dali-two.jpg
+- name: aws-s3-square-yellow-tree-in-the-rocks-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-yellow-tree-in-the-rocks-square.jpg
+- name: beach-rocks-beach-rocks-currents-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-space-pizza.jpg
+- name: bluelake-hot-spicy-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-01-17-38.jpg
 ---
 Sports Editor Apologizes For Tweeting 'scalps' After Game.&nbsp;Zabiegi Na Cellulit Wojkowice.&nbsp;Gather Receipts For Motor Fuel Income Tax Credit.&nbsp;Better Balance For Every Day.&nbsp;Annual Point In Time Homeless Count.&nbsp;Boys In The Band Tribute Concert Raises Funds For Local Causes.&nbsp;Late Antlerless Deer Season Extended For Residents In Two Areas.&nbsp;Blackhawks Rally To Beat Blue Jackets In Shootout.&nbsp;
